force-app/main/default/objects/Holders__c/Holders__c.object-meta.xml
<CustomObject>
    <label>Holders</label>
    <nameField>
        <displayFormat>HLD-{0000}</displayFormat>
        <label>Holders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>