force-app/main/default/objects/Holders__c/fields/Add_Excess_Flow_Valve__c.field-meta.xml
<CustomField>
    <fullName>Add_Excess_Flow_Valve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Excess Flow Valve</label>
    <type>Checkbox</type>
</CustomField>