force-app/main/default/objects/Holders__c/fields/Add_Gauge__c.field-meta.xml
<CustomField>
    <fullName>Add_Gauge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Gauge</label>
    <type>Checkbox</type>
</CustomField>