force-app/main/default/objects/Holders__c/fields/Add_Jackscrews__c.field-meta.xml
<CustomField>
    <fullName>Add_Jackscrews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Jackscrews</label>
    <type>Checkbox</type>
</CustomField>