force-app/main/default/objects/Holders__c/fields/Add_Nipple__c.field-meta.xml
<CustomField>
    <fullName>Add_Nipple__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Nipple</label>
    <type>Checkbox</type>
</CustomField>