force-app/main/default/objects/Holders__c/fields/Add_Reducer_Bushing__c.field-meta.xml
<CustomField>
    <fullName>Add_Reducer_Bushing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Reducer Bushing</label>
    <type>Checkbox</type>
</CustomField>