force-app/main/default/objects/Holders__c/fields/Add_to_midflange_03__c.field-meta.xml
<CustomField>
    <fullName>Add_to_midflange_03__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to midflange-03</label>
    <type>Checkbox</type>
</CustomField>