force-app/main/default/objects/Holders__c/fields/Add_to_outlet_02__c.field-meta.xml
<CustomField>
    <fullName>Add_to_outlet_02__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to outlet-02</label>
    <type>Checkbox</type>
</CustomField>