force-app/main/default/objects/Holders__c/fields/ASME_Section_VIII__c.field-meta.xml
<CustomField>
    <fullName>ASME_Section_VIII__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASME Section VIII</label>
    <type>Checkbox</type>
</CustomField>