force-app/main/default/objects/Holders__c/fields/ASSYPARTEXISTING_Backup__c.field-meta.xml
<CustomField>
    <fullName>ASSYPARTEXISTING_Backup__c</fullName>
    <label>ASSYPARTEXISTING Backup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>