force-app/main/default/objects/Holders__c/fields/ATEX_Certificate__c.field-meta.xml
<CustomField>
    <fullName>ATEX_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATEX Certificate</label>
    <type>Checkbox</type>
</CustomField>