force-app/main/default/objects/Holders__c/fields/Body_Option__c.field-meta.xml
<CustomField>
    <fullName>Body_Option__c</fullName>
    <label>Body Option</label>
    <type>TextArea</type>
</CustomField>