force-app/main/default/objects/Holders__c/fields/Bolting_Class__c.field-meta.xml
<CustomField>
    <fullName>Bolting_Class__c</fullName>
    <label>Bolting Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>