force-app/main/default/objects/Holders__c/fields/Bore2__c.field-meta.xml
<CustomField>
    <fullName>Bore2__c</fullName>
    <label>Bore(Outlet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>