force-app/main/default/objects/Holders__c/fields/Bore__c.field-meta.xml
<CustomField>
    <fullName>Bore__c</fullName>
    <label>Bore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>