force-app/main/default/objects/Holders__c/fields/Bore_Inlet__c.field-meta.xml
<CustomField>
    <fullName>Bore_Inlet__c</fullName>
    <label>Bore (Inlet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>