force-app/main/default/objects/Holders__c/fields/Brand_Dependent_Size__c.field-meta.xml
<CustomField>
    <fullName>Brand_Dependent_Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0008</fullName>
                <label>1/2&quot; (13mm)</label>
            </value>
            <value>
                <fullName>0011</fullName>
                <label>11/16&quot;</label>
            </value>
            <value>
                <fullName>0012</fullName>
                <label>3/4&quot; (20mm)</label>
            </value>
            <value>
                <fullName>0100</fullName>
                <label>1&quot; (25mm)</label>
            </value>
            <value>
                <fullName>0108</fullName>
                <label>1-1/2&quot; (40mm)</label>
            </value>
            <value>
                <fullName>0200</fullName>
                <label>2&quot; (50mm)</label>
            </value>
            <value>
                <fullName>0208</fullName>
                <label>2-1/2&quot; (65mm)</label>
            </value>
            <value>
                <fullName>0300</fullName>
                <label>3&quot; (80mm)</label>
            </value>
            <value>
                <fullName>0400</fullName>
                <label>4&quot; (100mm)</label>
            </value>
            <value>
                <fullName>0600</fullName>
                <label>6&quot; (150mm)</label>
            </value>
            <value>
                <fullName>0800</fullName>
                <label>8&quot; (200mm)</label>
            </value>
            <value>
                <fullName>1000</fullName>
                <label>10&quot; (250mm)</label>
            </value>
            <value>
                <fullName>1200</fullName>
                <label>12&quot; (300mm)</label>
            </value>
            <value>
                <fullName>1212</fullName>
                <label>12&quot; x 12&quot;</label>
            </value>
            <value>
                <fullName>1218</fullName>
                <label>12&quot; x 18&quot;</label>
            </value>
            <value>
                <fullName>1224</fullName>
                <label>12&quot; x 24&quot;</label>
            </value>
            <value>
                <fullName>1400</fullName>
                <label>14&quot; (350mm)</label>
            </value>
            <value>
                <fullName>1600</fullName>
                <label>16&quot; (400mm)</label>
            </value>
            <value>
                <fullName>1800</fullName>
                <label>18&quot; (450mm)</label>
            </value>
            <value>
                <fullName>1818</fullName>
                <label>18&quot; x 18&quot;</label>
            </value>
            <value>
                <fullName>1824</fullName>
                <label>18&quot; x 24&quot;</label>
            </value>
            <value>
                <fullName>1830</fullName>
                <label>18&quot; x 30&quot;</label>
            </value>
            <value>
                <fullName>1835</fullName>
                <label>18&quot; x 35&quot;</label>
            </value>
            <value>
                <fullName>2000</fullName>
                <label>20&quot; (500mm)</label>
            </value>
            <value>
                <fullName>2400</fullName>
                <label>24&quot; (600mm)</label>
            </value>
            <value>
                <fullName>2424</fullName>
                <label>24&quot; x 24&quot;</label>
            </value>
            <value>
                <fullName>2430</fullName>
                <label>24&quot; x 30&quot;</label>
            </value>
            <value>
                <fullName>2436</fullName>
                <label>24&quot; x 36&quot;</label>
            </value>
            <value>
                <fullName>2444</fullName>
                <label>24&quot; x 44&quot;</label>
            </value>
            <value>
                <fullName>2600</fullName>
                <label>26&quot; (650mm)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>