force-app/main/default/objects/Holders__c/fields/Brand_Formula__c.field-meta.xml
<CustomField>
    <fullName>Brand_Formula__c</fullName>
    <formula>Quote_Line__r.Brand__c</formula>
    <label>Brand Formula</label>
    <type>Text</type>
</CustomField>