force-app/main/default/objects/Holders__c/fields/CE_PED_Compliance__c.field-meta.xml
<CustomField>
    <fullName>CE_PED_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CE &amp; PED Compliance</label>
    <type>Checkbox</type>
</CustomField>