force-app/main/default/objects/Holders__c/fields/China_Manufacturing_License__c.field-meta.xml
<CustomField>
    <fullName>China_Manufacturing_License__c</fullName>
    <label>China Manufacturing License</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WSI</fullName>
                <label>Waive Source Inspection</label>
            </value>
            <value>
                <fullName>CUSTSI</fullName>
                <label>Customer Sourced Inspection</label>
            </value>
            <value>
                <fullName>CDCSI</fullName>
                <label>CDC Source Inspection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>