force-app/main/default/objects/Holders__c/fields/Clamp_Material__c.field-meta.xml
<CustomField>
    <fullName>Clamp_Material__c</fullName>
    <label>Clamp Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>