force-app/main/default/objects/Holders__c/fields/Cleaning_Markings__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Markings__c</fullName>
    <label>Cleaning/Markings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>Standard Cleaning</label>
            </value>
            <value>
                <fullName>C1</fullName>
                <label>Blue Gold ® MP-4005</label>
            </value>
            <value>
                <fullName>C2</fullName>
                <label>Clean with Acetone</label>
            </value>
            <value>
                <fullName>C3</fullName>
                <label>Dry Chlorine MP-4003</label>
            </value>
            <value>
                <fullName>C4</fullName>
                <label>Fluorine SC-12654</label>
            </value>
            <value>
                <fullName>C5</fullName>
                <label>LOX MP-4003</label>
            </value>
            <value>
                <fullName>C6</fullName>
                <label>OX MP-4003</label>
            </value>
            <value>
                <fullName>M2</fullName>
                <label>SC 10214 Blue Gold® MP-4005</label>
            </value>
            <value>
                <fullName>M1</fullName>
                <label>SC 10210</label>
            </value>
            <value>
                <fullName>M3</fullName>
                <label>SC 10214 OX/LOX MP-4003</label>
            </value>
            <value>
                <fullName>M4</fullName>
                <label>SC 14611</label>
            </value>
            <value>
                <fullName>M5</fullName>
                <label>SC 14611/ SC 10210</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>