force-app/main/default/objects/Holders__c/fields/Coating__c.field-meta.xml
<CustomField>
    <fullName>Coating__c</fullName>
    <label>Coating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>