force-app/main/default/objects/Holders__c/fields/Coating_Body__c.field-meta.xml
<CustomField>
    <fullName>Coating_Body__c</fullName>
    <label>Coating (Body)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>