force-app/main/default/objects/Holders__c/fields/Coating_Inlet__c.field-meta.xml
<CustomField>
    <fullName>Coating_Inlet__c</fullName>
    <label>Coating (Inlet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>