force-app/main/default/objects/Holders__c/fields/Coating_Mid_Flange__c.field-meta.xml
<CustomField>
    <fullName>Coating_Mid_Flange__c</fullName>
    <label>Coating (Mid Flange)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>