force-app/main/default/objects/Holders__c/fields/Companion_Flange_Material__c.field-meta.xml
<CustomField>
    <fullName>Companion_Flange_Material__c</fullName>
    <label>Companion Flange Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>