force-app/main/default/objects/Holders__c/fields/Companion_Flange_Option__c.field-meta.xml
<CustomField>
    <fullName>Companion_Flange_Option__c</fullName>
    <label>Companion Flange Option(Back-end)</label>
    <type>TextArea</type>
</CustomField>