force-app/main/default/objects/Holders__c/fields/Companion_Flange_Options__c.field-meta.xml
<CustomField>
    <fullName>Companion_Flange_Options__c</fullName>
    <label>Companion Flange Options</label>
    <type>TextArea</type>
</CustomField>