force-app/main/default/objects/Holders__c/fields/Converted_Holder_Max_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Converted_Holder_Max_Pressure__c</fullName>
    <label>Converted Holder Max Pressure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>