force-app/main/default/objects/Holders__c/fields/Cost_Override__c.field-meta.xml
<CustomField>
    <fullName>Cost_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost Override</label>
    <type>Checkbox</type>
</CustomField>