force-app/main/default/objects/Holders__c/fields/CSA_Markings__c.field-meta.xml
<CustomField>
    <fullName>CSA_Markings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSA Markings</label>
    <type>Checkbox</type>
</CustomField>