force-app/main/default/objects/Holders__c/fields/DWGNO__c.field-meta.xml
<CustomField>
    <fullName>DWGNO__c</fullName>
    <label>DWGNO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>