force-app/main/default/objects/Holders__c/fields/Examination_and_Test_Options__c.field-meta.xml
<CustomField>
    <fullName>Examination_and_Test_Options__c</fullName>
    <label>Examination and Test Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>