force-app/main/default/objects/Holders__c/fields/Excess_Flow_Valve__c.field-meta.xml
<CustomField>
    <fullName>Excess_Flow_Valve__c</fullName>
    <label>Excess Flow Valve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>