force-app/main/default/objects/Holders__c/fields/Excess_Flow_Valve_Mid_Flange__c.field-meta.xml
<CustomField>
    <fullName>Excess_Flow_Valve_Mid_Flange__c</fullName>
    <label>Excess Flow Valve (Mid Flange)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>