force-app/main/default/objects/Holders__c/fields/Eyebolts__c.field-meta.xml
<CustomField>
    <fullName>Eyebolts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eyebolts</label>
    <type>Checkbox</type>
</CustomField>