force-app/main/default/objects/Holders__c/fields/Eyebolts_Drilling_Inlet__c.field-meta.xml
<CustomField>
    <fullName>Eyebolts_Drilling_Inlet__c</fullName>
    <label>Eyebolts Drilling (Inlet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>