force-app/main/default/objects/Holders__c/fields/Eyebolts_Drilling_Midflange__c.field-meta.xml
<CustomField>
    <fullName>Eyebolts_Drilling_Midflange__c</fullName>
    <label>Eyebolts Drilling Midflange</label>
    <length>255</length>
    <type>Text</type>
</CustomField>