force-app/main/default/objects/Holders__c/fields/Eyebolts_Outlet__c.field-meta.xml
<CustomField>
    <fullName>Eyebolts_Outlet__c</fullName>
    <label>Eyebolts Outlet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>