force-app/main/default/objects/Holders__c/fields/Facing_Inlet__c.field-meta.xml
<CustomField>
    <fullName>Facing_Inlet__c</fullName>
    <label>Facing (Inlet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>