force-app/main/default/objects/Holders__c/fields/Facing_Outlet__c.field-meta.xml
<CustomField>
    <fullName>Facing_Outlet__c</fullName>
    <label>Facing (Outlet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>