force-app/main/default/objects/Holders__c/fields/Finish_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Finish_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finish Configuration?</label>
    <type>Checkbox</type>
</CustomField>