force-app/main/default/objects/Holders__c/fields/Gasket_Material__c.field-meta.xml
<CustomField>
    <fullName>Gasket_Material__c</fullName>
    <label>Gasket Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>