force-app/main/default/objects/Holders__c/fields/Gauge__c.field-meta.xml
<CustomField>
    <fullName>Gauge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gauge</label>
    <type>Checkbox</type>
</CustomField>