force-app/main/default/objects/Holders__c/fields/Gauge_Selection_Outlet__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Selection_Outlet__c</fullName>
    <label>Gauge Selection Outlet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>