force-app/main/default/objects/Holders__c/fields/Gauge_Tap2__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Tap2__c</fullName>
    <label>Gauge Tap (Mid Flange)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>