force-app/main/default/objects/Holders__c/fields/Gauge_Tap__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Tap__c</fullName>
    <label>Gauge Tap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>