force-app/main/default/objects/Holders__c/fields/Gauge_Tap_Inlet__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Tap_Inlet__c</fullName>
    <label>Gauge Tap (Inlet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>