force-app/main/default/objects/Holders__c/fields/GOST_CUTR_Compliance__c.field-meta.xml
<CustomField>
    <fullName>GOST_CUTR_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GOST / CUTR Compliance</label>
    <type>Checkbox</type>
</CustomField>