force-app/main/default/objects/Holders__c/fields/Holddown_Ring_Material__c.field-meta.xml
<CustomField>
    <fullName>Holddown_Ring_Material__c</fullName>
    <label>Holddown Ring Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>