force-app/main/default/objects/Holders__c/fields/Holder_Max_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Holder_Max_Pressure__c</fullName>
    <label>Holder Max Pressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>