force-app/main/default/objects/Holders__c/fields/Holder_Max_Pressure_Units__c.field-meta.xml
<CustomField>
    <fullName>Holder_Max_Pressure_Units__c</fullName>
    <label>Holder Max Pressure Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>atmg</fullName>
            </value>
            <value>
                <fullName>barg</fullName>
            </value>
            <value>
                <fullName>kgf/cm2</fullName>
            </value>
            <value>
                <fullName>kPa</fullName>
            </value>
            <value>
                <fullName>MPa</fullName>
            </value>
            <value>
                <fullName>psig</fullName>
            </value>
            <value>
                <fullName>torr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>