force-app/main/default/objects/Holders__c/fields/Holder_Product__c.field-meta.xml
<CustomField>
    <fullName>Holder_Product__c</fullName>
    <label>Holder Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAL-VAC Insert</fullName>
            </value>
            <value>
                <fullName>CAL-VAC Sanitary Fitting</fullName>
            </value>
            <value>
                <fullName>Union (UL)</fullName>
            </value>
            <value>
                <fullName>Clean Sweep (FS) (w/ Spacer Ring)</fullName>
            </value>
            <value>
                <fullName>Clean Sweep (FS) (W/O spacer ring)</fullName>
            </value>
            <value>
                <fullName>Clean Sweep (LL)</fullName>
            </value>
            <value>
                <fullName>UNISERT Double Disc Holder</fullName>
            </value>
            <value>
                <fullName>7I Insert (LL) Double Disc Holder</fullName>
            </value>
            <value>
                <fullName>RHI Insert</fullName>
            </value>
            <value>
                <fullName>UNISERT</fullName>
            </value>
            <value>
                <fullName>7I Insert (HL)</fullName>
            </value>
            <value>
                <fullName>Bolted (LL)</fullName>
            </value>
            <value>
                <fullName>7I Insert (LL)</fullName>
            </value>
            <value>
                <fullName>Sanitary Fitting</fullName>
            </value>
            <value>
                <fullName>Clean Sweep Sanitary Fitting (LL)</fullName>
            </value>
            <value>
                <fullName>RHI Double Disc Holder</fullName>
            </value>
            <value>
                <fullName>7I Insert (HL) Double Disc Holder</fullName>
            </value>
            <value>
                <fullName>Bolted (HL)</fullName>
            </value>
            <value>
                <fullName>Clean Sweep Sanitary Fitting (FS)</fullName>
            </value>
            <value>
                <fullName>Screw Type</fullName>
            </value>
            <value>
                <fullName>Vent Frame - Circular</fullName>
            </value>
            <value>
                <fullName>Vent Frame - Rectangular</fullName>
            </value>
            <value>
                <fullName>Vent Frame - Square</fullName>
            </value>
            <value>
                <fullName>FA Insert</fullName>
            </value>
            <value>
                <fullName>RA Insert</fullName>
            </value>
            <value>
                <fullName>HPX-RH Insert</fullName>
            </value>
            <value>
                <fullName>HPX-PT Pre-Torqued</fullName>
            </value>
            <value>
                <fullName>HPX-PT-RH Pre-Torqued</fullName>
            </value>
            <value>
                <fullName>HPX Insert</fullName>
            </value>
            <value>
                <fullName>HPX Insert Double Disc Holder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>