force-app/main/default/objects/Holders__c/fields/Holder_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Holder_Product_Code__c</fullName>
    <label>Holder Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>