force-app/main/default/objects/Holders__c/fields/Inlet_Material__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Material__c</fullName>
    <label>Inlet Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>