force-app/main/default/objects/Holders__c/fields/Inlet_Option__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Option__c</fullName>
    <label>Inlet Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>