force-app/main/default/objects/Holders__c/fields/Inlet_Options__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Options__c</fullName>
    <label>Inlet Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>