force-app/main/default/objects/Holders__c/fields/IsProductSelection__c.field-meta.xml
<CustomField>
    <fullName>IsProductSelection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProductSelection</label>
    <type>Checkbox</type>
</CustomField>