force-app/main/default/objects/Holders__c/fields/J_Hook__c.field-meta.xml
<CustomField>
    <fullName>J_Hook__c</fullName>
    <label>J-Hook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>