force-app/main/default/objects/Holders__c/fields/Jackscrew_Drilling2__c.field-meta.xml
<CustomField>
    <fullName>Jackscrew_Drilling2__c</fullName>
    <label>Jackscrew Drilling(outlet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>