force-app/main/default/objects/Holders__c/fields/Jackscrew_Drilling__c.field-meta.xml
<CustomField>
    <fullName>Jackscrew_Drilling__c</fullName>
    <label>Jackscrew Drilling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>