force-app/main/default/objects/Holders__c/fields/Jackscrews_Additional__c.field-meta.xml
<CustomField>
    <fullName>Jackscrews_Additional__c</fullName>
    <label>Jackscrews (Additional)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>