force-app/main/default/objects/Holders__c/fields/Knifeblade_Material__c.field-meta.xml
<CustomField>
    <fullName>Knifeblade_Material__c</fullName>
    <label>Knifeblade Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>