force-app/main/default/objects/Holders__c/fields/Knifeblade_Material_Inlet__c.field-meta.xml
<CustomField>
    <fullName>Knifeblade_Material_Inlet__c</fullName>
    <label>Knifeblade Material (Inlet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>