force-app/main/default/objects/Holders__c/fields/KOSHA_Compliance__c.field-meta.xml
<CustomField>
    <fullName>KOSHA_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KOSHA Compliance</label>
    <type>Checkbox</type>
</CustomField>