force-app/main/default/objects/Holders__c/fields/Lead_Time_Override__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Time Override</label>
    <type>Checkbox</type>
</CustomField>