force-app/main/default/objects/Holders__c/fields/Lining__c.field-meta.xml
<CustomField>
    <fullName>Lining__c</fullName>
    <label>Lining</label>
    <length>255</length>
    <type>Text</type>
</CustomField>