force-app/main/default/objects/Holders__c/fields/Lining_Inlet__c.field-meta.xml
<CustomField>
    <fullName>Lining_Inlet__c</fullName>
    <label>Lining (Inlet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>