force-app/main/default/objects/Holders__c/fields/Lining_Mid_Flange__c.field-meta.xml
<CustomField>
    <fullName>Lining_Mid_Flange__c</fullName>
    <label>Lining (Mid Flange)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>