force-app/main/default/objects/Holders__c/fields/Mid_Flange_Material__c.field-meta.xml
<CustomField>
    <fullName>Mid_Flange_Material__c</fullName>
    <label>Mid Flange Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>