force-app/main/default/objects/Holders__c/fields/Mid_Flange_Option__c.field-meta.xml
<CustomField>
    <fullName>Mid_Flange_Option__c</fullName>
    <label>Mid Flange Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>