force-app/main/default/objects/Holders__c/fields/Mid_Flange_Options__c.field-meta.xml
<CustomField>
    <fullName>Mid_Flange_Options__c</fullName>
    <label>Mid Flange Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>