force-app/main/default/objects/Holders__c/fields/Mid_Flange_Options_List_Filter__c.field-meta.xml
<CustomField>
    <fullName>Mid_Flange_Options_List_Filter__c</fullName>
    <label>Mid Flange Options List Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>