force-app/main/default/objects/Holders__c/fields/NACE_Compliance__c.field-meta.xml
<CustomField>
    <fullName>NACE_Compliance__c</fullName>
    <label>NACE Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MR0175</fullName>
                <label>NACE MR0175 / ISO15156</label>
            </value>
            <value>
                <fullName>MR0103</fullName>
                <label>NACE MR0103</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>