force-app/main/default/objects/Holders__c/fields/NEWSPCLPARTNOBASE__c.field-meta.xml
<CustomField>
    <fullName>NEWSPCLPARTNOBASE__c</fullName>
    <label>New Special Part No Base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CD50000</fullName>
            </value>
            <value>
                <fullName>LD50000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>