force-app/main/default/objects/Holders__c/fields/Nipple2__c.field-meta.xml
<CustomField>
    <fullName>Nipple2__c</fullName>
    <label>Nipple(Outlet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>