force-app/main/default/objects/Holders__c/fields/Nipple_Mid_Flange__c.field-meta.xml
<CustomField>
    <fullName>Nipple_Mid_Flange__c</fullName>
    <label>Nipple(Mid Flange)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>