force-app/main/default/objects/Holders__c/fields/Nut_Material__c.field-meta.xml
<CustomField>
    <fullName>Nut_Material__c</fullName>
    <label>Nut Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>