force-app/main/default/objects/Holders__c/fields/Outlet_Connection__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Connection__c</fullName>
    <label>Outlet Connection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>