force-app/main/default/objects/Holders__c/fields/Outlet_Material__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Material__c</fullName>
    <label>Outlet Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>