force-app/main/default/objects/Holders__c/fields/Outlet_Option2__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Option2__c</fullName>
    <label>Outlet Option(COOUT)</label>
    <type>TextArea</type>
</CustomField>