force-app/main/default/objects/Holders__c/fields/Outlet_Options__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Options__c</fullName>
    <label>Outlet Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>