force-app/main/default/objects/Holders__c/fields/Part_Number_Base__c.field-meta.xml
<CustomField>
    <fullName>Part_Number_Base__c</fullName>
    <label>Part Number Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>