force-app/main/default/objects/Holders__c/fields/PartNumberBase_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>PartNumberBase_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PartNumberBase_Checkbox</label>
    <type>Checkbox</type>
</CustomField>